Bug 501966 - "Unable to change NTP settings" error message when canceling password dialog
Summary: "Unable to change NTP settings" error message when canceling password dialog
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_clock (other bugs)
Version First Reported In: 6.3.3
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2025-03-25 03:37 UTC by Patrick Silva
Modified: 2025-12-05 23:59 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report:


Attachments
screenshot (170.04 KB, image/png)
2025-03-25 03:37 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2025-03-25 03:37:49 UTC
Created attachment 179713 [details]
screenshot

STEPS TO REPRODUCE
1. open Date & Time KCM
2. check or uncheck "Set date and time automatically"
3. click on "Apply" button - password dialog shows up
4. cancel the password dialog

OBSERVED RESULT
"Unable to change NTP settings" error message seen in the attached screenshot

EXPECTED RESULT
no error

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.3.3
KDE Frameworks Version: 6.12.0
Qt Version: 6.8.2
Graphics Platform: Wayland
Comment 1 David Edmundson 2025-03-25 10:49:32 UTC
If changing NTP settings requires authentication on your setup and you cancel the password dialog then this message is correct. 

Can you confirm what you expect to happen?
Comment 2 Patrick Silva 2025-03-25 13:38:44 UTC
It's unnecessary to show a message after canceling a password dialog confirming that a change was not applied. This is obvious.
Another thing is that after canceling the password dialog we can change "Set date and time automatically" without entering a password.
Comment 3 Gianfranco Cassone 2025-03-25 20:16:59 UTC
(In reply to Patrick Silva from comment #2)
> It's unnecessary to show a message after canceling a password dialog
> confirming that a change was not applied. This is obvious.
> Another thing is that after canceling the password dialog we can change "Set
> date and time automatically" without entering a password.

If i cancel the dialog and try to change the settings it asks for the password, so it seems fine
Comment 4 Nate Graham 2025-03-25 20:34:22 UTC
This is a real issue; canceling a password dialog shouldn't show an error message.
Comment 5 Gianfranco Cassone 2025-03-26 18:52:34 UTC
*** Bug 501979 has been marked as a duplicate of this bug. ***
Comment 6 Bug Janitor Service 2025-09-26 13:09:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3214
Comment 7 David Edmundson 2025-12-03 15:04:30 UTC
Git commit bf6b2f22f17ddad9d52bfdf3ba1581f6cec30630 by David Edmundson.
Committed on 03/12/2025 at 14:39.
Pushed by davidedmundson into branch 'master'.

kcms/dateandtime: Avoid showing warning for permission errors

Is a user enters the wrong password or cancels the prompt to enter a
polkit password, they have already been shown an error message.

We don't need to show a second prompt.

The method is changed to return after any timedate settings fail, as if
you can't unset NTP you can't set a time.

M  +14   -9    kcms/dateandtime/main.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/bf6b2f22f17ddad9d52bfdf3ba1581f6cec30630