kcms/dateandtime: Avoid showing warning for permission errors

Is a user enters the wrong password or cancels the prompt to enter a
polkit password, they have already been shown an error message.

We don't need to show a second prompt.

BUG: 501966